syntax = "proto3";

package api;

option go_package = "github.com/realwrtoff/rest_grpc/sycm/api/sycm";

import "google/api/annotations.proto";
// import "google/protobuf/empty.proto";
// import "gogoproto/gogo.proto";

message CookieReq {
  string cookie = 1;
  string token = 2;
}

message CookieRes {
  string code = 1;
  string message = 2;
  string data = 3;
}

service sycmService {
  rpc SetCookie(CookieReq) returns (CookieRes) {
    option (google.api.http) = {
      post: "/cookie/set",
    };
  }

  rpc GetCookie(CookieReq) returns (CookieRes) {
    option (google.api.http) = {
      get: "/cookie/get",
    };
  }
}